--- a/.github/workflows/ci-mod-templates.yaml
+++ b/.github/workflows/ci-mod-templates.yaml
@@ -84,9 +84,7 @@ jobs:
       - name: 📦 List Main Module Functions
         uses: dagger/dagger-for-github@v6
         with:
-          workdir: ${{ matrix.module }}
-          module: .
-          verb: call
+          module: ${{ matrix.module }}
           version: ${{ env.DAGGER_VERSION }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
