--- a/.github/workflows/ci-mod-templates.yaml
+++ b/.github/workflows/ci-mod-templates.yaml
@@ -82,8 +82,9 @@ jobs:
           go-version: ${{ env.GO_VERSION }}
 
       - name: 📦 List Main Module Functions
-        uses: dagger/dagger-for-github@v6
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
         with:
+          verb: call
           module: ${{ matrix.module }}
           version: ${{ env.DAGGER_VERSION }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
