--- a/.github/workflows/ci-modules.yaml
+++ b/.github/workflows/ci-modules.yaml
@@ -43,23 +43,29 @@ jobs:
           dagger version
 
       - name: 📦 Dagger Develop Main Module
-        run: |
-          cd ${{ matrix.module }}
-          dagger develop
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        with:
+          verb: develop
+          module: ${{ matrix.module }}
+          version: ${{ env.DAGGER_VERSION }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: 🧪 Dagger Develop Test Module
-        run: |
-          cd ${{ matrix.module }}/tests
-          dagger develop
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        with:
+          verb: develop
+          module: ${{ matrix.module }}/tests
+          version: ${{ env.DAGGER_VERSION }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: 📄 Dagger Develop Examples Module
-        run: |
-          cd ${{ matrix.module }}/examples/go
-          dagger develop
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        with:
+          verb: develop
+          module: ${{ matrix.module }}/examples/go
+          version: ${{ env.DAGGER_VERSION }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -83,7 +89,7 @@ jobs:
           go-version: ${{ env.GO_VERSION }}
 
       - name: 📦 List Main Module Functions
-        uses: dagger/dagger-for-github@v6
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
         with:
           verb: functions
           module: ${{ matrix.module }}
@@ -112,7 +118,7 @@ jobs:
           go-version: ${{ env.GO_VERSION }}
 
       - name: 💣 Run All Tests
-        uses: dagger/dagger-for-github@v6
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
         with:
           verb: call
           args: test-all
@@ -142,7 +148,7 @@ jobs:
           go-version: ${{ env.GO_VERSION }}
 
       - name: 🥗 Run All Example Recipes
-        uses: dagger/dagger-for-github@v6
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
         with:
           verb: call
           args: all-recipes
