--- a/.github/workflows/ci-mod-module-template.yml
+++ b/.github/workflows/ci-mod-module-template.yml
@@ -1,215 +1,199 @@
 ---
-    name: CI module-template 🧰
-    on:
-        push:
-            branches:
-                - main
-                - master
-            paths:
-                - module-template/**
-                - module-template/tests/**
-                - module-template/examples/go/**
-        pull_request:
-            paths:
-                - module-template/**
-                - module-template/tests/**
-                - module-template/examples/go/**
-                - .github/workflows/ci-mod-module-template.yaml
-        workflow_dispatch:
+name: CI module-template 🧰
+on:
+  push:
+    branches:
+      - main
+      - master
+    paths:
+      - module-template/**
+      - module-template/tests/**
+      - module-template/examples/go/**
+  pull_request:
+    paths:
+      - module-template/**
+      - module-template/tests/**
+      - module-template/examples/go/**
+      - .github/workflows/ci-mod-module-template.yaml
+  workflow_dispatch:
 
-    permissions:
-        contents: read
-        pull-requests: read
-        checks: write
+permissions:
+  contents: read
+  pull-requests: read
+  checks: write
 
-    env:
-        GO_VERSION: "1.22"
-        DAGGER_VERSION: 0.14.0
-        GOLANGCI_LINT_VERSION: v1.62.0
+env:
+  GO_VERSION: "1.22"
+  DAGGER_VERSION: 0.14.0
+  GOLANGCI_LINT_VERSION: v1.62.0
 
-    jobs:
-        dagger-build:
-            strategy:
-                matrix:
-                    module: [module-template]
-                fail-fast: true
-            name: 🏗️ Build ${{ matrix.module }}
-            runs-on: ubuntu-latest
-            steps:
-                - uses: actions/checkout@v4
-                - uses: actions/setup-go@v5
-                  with:
-                      go-version: ${{ env.GO_VERSION }}
-                - name: 📦 Dagger Develop Main Module
-                  uses: dagger/dagger-for-github@v6
-                  with:
-                      verb: develop
-                      module: ${{ matrix.module }}
-                      version: ${{ env.DAGGER_VERSION }}
-                      cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-                  env:
-                      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                - name: 🧪 Dagger Develop Test Module
-                  uses: dagger/dagger-for-github@v6
-                  with:
-                      verb: develop
-                      module: ${{ matrix.module }}/tests
-                      version: ${{ env.DAGGER_VERSION }}
-                      cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-                  env:
-                      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                - name: 📄 Dagger Develop Examples Module
-                  uses: dagger/dagger-for-github@v6
-                  with:
-                      verb: develop
-                      module: ${{ matrix.module }}/examples/go
-                      version: ${{ env.DAGGER_VERSION }}
-                      cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-                  env:
-                      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+defaults:
+  run:
+    working-directory: module-template
 
-        dagger-list-functions:
-            needs: dagger-build
-            strategy:
-                matrix:
-                    module: [module-template]
-                fail-fast: false
-            name: 📞 Call Functions in ${{ matrix.module }}
-            runs-on: ubuntu-latest
-            steps:
-                - uses: actions/checkout@v4
-                - uses: actions/setup-go@v5
-                  with:
-                      go-version: ${{ env.GO_VERSION }}
-                - name: 📦 List Main Module Functions
-                  uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
-                  with:
-                      verb: functions
-                      module: ${{ matrix.module }}
-                      version: ${{ env.DAGGER_VERSION }}
-                      cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-                  env:
-                      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                - name: 🧪 List Test Module Functions
-                  uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
-                  with:
-                      verb: functions
-                      module: ${{ matrix.module }}/tests
-                      version: ${{ env.DAGGER_VERSION }}
-                      cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-                  env:
-                      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                - name: 📄 List Example Module Functions
-                  uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
-                  with:
-                      verb: functions
-                      module: ${{ matrix.module }}/examples/go
-                      version: ${{ env.DAGGER_VERSION }}
-                      cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-                  env:
-                      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+jobs:
+  dagger-build:
+    name: 🏗️ Build module-template
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.GO_VERSION }}
+      - name: 📦 Dagger Develop Main Module
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: develop
+          module: .
+          version: ${{ env.DAGGER_VERSION }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: 🧪 Dagger Develop Test Module
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: develop
+          module: tests
+          version: ${{ env.DAGGER_VERSION }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: 📄 Dagger Develop Examples Module
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: develop
+          module: examples/go
+          version: ${{ env.DAGGER_VERSION }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-        run-tests:
-            needs: dagger-build
-            strategy:
-                matrix:
-                    module: [module-template]
-                fail-fast: false
-            name: 🧪 Run Tests for ${{ matrix.module }}
-            runs-on: ubuntu-latest
-            steps:
-                - uses: actions/checkout@v4
-                - uses: actions/setup-go@v5
-                  with:
-                      go-version: ${{ env.GO_VERSION }}
-                - name: 💣 Run All Tests
-                  uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
-                  with:
-                      verb: call
-                      args: test-all
-                      module: ${{ matrix.module }}/tests
-                      version: ${{ env.DAGGER_VERSION }}
-                      cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-                  env:
-                      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  dagger-list-functions:
+    needs: dagger-build
+    name: 📞 Call Functions in module-template
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.GO_VERSION }}
+      - name: 📦 List Main Module Functions
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        with:
+          verb: functions
+          module: .
+          version: ${{ env.DAGGER_VERSION }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: 🧪 List Test Module Functions
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        with:
+          verb: functions
+          module: tests
+          version: ${{ env.DAGGER_VERSION }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: 📄 List Example Module Functions
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        with:
+          verb: functions
+          module: examples/go
+          version: ${{ env.DAGGER_VERSION }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-        run-recipes:
-            needs: dagger-build
-            strategy:
-                matrix:
-                    module: [module-template]
-                fail-fast: false
-            name: 🥗 Run Recipes for ${{ matrix.module }}
-            runs-on: ubuntu-latest
-            steps:
-                - uses: actions/checkout@v4
-                - uses: actions/setup-go@v5
-                  with:
-                      go-version: ${{ env.GO_VERSION }}
-                - name: 🥗 Run All Example Recipes
-                  uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
-                  with:
-                      verb: call
-                      args: all-recipes
-                      module: ${{ matrix.module }}/examples/go
-                      version: ${{ env.DAGGER_VERSION }}
-                      cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-                  env:
-                      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  run-tests:
+    needs: dagger-build
+    name: 🧪 Run Tests for module-template
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.GO_VERSION }}
+      - name: 💣 Run All Tests
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        with:
+          verb: call
+          args: test-all
+          module: tests
+          version: ${{ env.DAGGER_VERSION }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-        golangci-lint:
-            needs: dagger-build
-            strategy:
-                matrix:
-                    module: [module-template]
-                fail-fast: false
-            name: 🔍 Lint ${{ matrix.module }}
-            runs-on: ubuntu-latest
-            steps:
-                - uses: actions/checkout@v4
-                - uses: actions/setup-go@v5
-                  with:
-                      go-version: ${{ env.GO_VERSION }}
-                - name: 🔧 Install Dagger CLI
-                  run: |
-                    curl -fsSL https://dl.dagger.io/dagger/install.sh | DAGGER_VERSION=${{ env.DAGGER_VERSION }} BIN_DIR=/usr/local/bin sudo -E sh
-                    dagger version
-                - name: 🔧 Install golangci-lint
-                  run: |
-                    curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s ${{ env.GOLANGCI_LINT_VERSION }}
-                    sudo mv ./bin/golangci-lint /usr/local/bin/golangci-lint
-                - name: 🚀 Dagger Develop Main Module
-                  run: |
-                    dagger develop
-                  env:
-                      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                - name: 📝 Run lint on Main Module
-                  run: |
-                    ls -ltrah && \
-                    golangci-lint run --config=../.golangci.yml --verbose
-                  env:
-                      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                - name: 🚀 Dagger Develop Test Module
-                  run: |
-                    cd tests && ls -ltrah && \
-                    dagger develop
-                  env:
-                      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                - name: 📝 Run lint on Test Module
-                  run: |
-                    cd tests && ls -ltrah && \
-                    golangci-lint run --config=../../.golangci.yml --verbose
-                  env:
-                      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                - name: 🚀 Dagger Develop Example Module
-                  run: |
-                    cd examples/go
-                    dagger develop
-                  env:
-                      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                - name: 📝 Run lint on Example Module
-                  run: |
-                    cd examples/go && ls -ltrah && \
-                    golangci-lint run --config=../../../.golangci.yml --verbose
-                  env:
-                      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  run-recipes:
+    needs: dagger-build
+    name: 🥗 Run Recipes for module-template
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.GO_VERSION }}
+      - name: 🥗 Run All Example Recipes
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        with:
+          verb: call
+          args: all-recipes
+          module: examples/go
+          version: ${{ env.DAGGER_VERSION }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  golangci-lint:
+    needs: dagger-build
+    name: 🔍 Lint module-template
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.GO_VERSION }}
+      - name: 🔧 Install Dagger CLI
+        run: |
+          curl -fsSL https://dl.dagger.io/dagger/install.sh | DAGGER_VERSION=${{ env.DAGGER_VERSION }} BIN_DIR=/usr/local/bin sudo -E sh
+          dagger version
+      - name: 🔧 Install golangci-lint
+        run: |
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s ${{ env.GOLANGCI_LINT_VERSION }}
+          sudo mv ./bin/golangci-lint /usr/local/bin/golangci-lint
+      - name: 🚀 Dagger Develop Main Module
+        run: |
+          dagger develop
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: 📝 Run lint on Main Module
+        run: |
+          ls -ltrah && \
+          golangci-lint run --config=.golangci.yml --verbose
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: 🚀 Dagger Develop Test Module
+        run: |
+          cd tests && ls -ltrah && \
+          dagger develop
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: 📝 Run lint on Test Module
+        run: |
+          cd tests && ls -ltrah && \
+          golangci-lint run --config=../.golangci.yml --verbose
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: 🚀 Dagger Develop Example Module
+        run: |
+          cd examples/go
+          dagger develop
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: 📝 Run lint on Example Module
+        run: |
+          cd examples/go && ls -ltrah && \
+          golangci-lint run --config=../../.golangci.yml --verbose
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
