--- a/.github/workflows/ci-mod-module-template.yml
+++ b/.github/workflows/ci-mod-module-template.yml
@@ -1,5 +1,5 @@
----
-name: CI module-template 🧰
+name: CI module-template 🧹
+
 on:
   push:
     branches:
@@ -7,13 +7,9 @@ on:
       - master
     paths:
       - module-template/**
-      - module-template/tests/**
-      - module-template/examples/go/**
   pull_request:
     paths:
       - module-template/**
-      - module-template/tests/**
-      - module-template/examples/go/**
       - .github/workflows/ci-mod-module-template.yaml
   workflow_dispatch:
 
@@ -26,10 +22,7 @@ env:
   GO_VERSION: "1.22"
   DAGGER_VERSION: 0.14.0
   GOLANGCI_LINT_VERSION: v1.62.0
-
-defaults:
-  run:
-    working-directory: module-template
+  MODULE: module-template
 
 jobs:
   dagger-build:
@@ -40,29 +33,32 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-      - name: 📦 Dagger Develop Main Module
+
+      - name: 📦 Dagger Develop All Modules
         uses: dagger/dagger-for-github@v6
         with:
           verb: develop
-          module: .
+          module: ${{ env.MODULE }}
           version: ${{ env.DAGGER_VERSION }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: 🧪 Dagger Develop Test Module
+
+      - name: 🧪 Dagger Develop Tests
         uses: dagger/dagger-for-github@v6
         with:
           verb: develop
-          module: tests
+          module: ${{ env.MODULE }}/tests
           version: ${{ env.DAGGER_VERSION }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: 📄 Dagger Develop Examples Module
+
+      - name: 📄 Dagger Develop Examples
         uses: dagger/dagger-for-github@v6
         with:
           verb: develop
-          module: examples/go
+          module: ${{ env.MODULE }}/examples/go
           version: ${{ env.DAGGER_VERSION }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
@@ -70,36 +66,39 @@ jobs:
 
   dagger-list-functions:
     needs: dagger-build
-    name: 📞 Call Functions in module-template
+    name: 📞 List All Functions
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-      - name: 📦 List Main Module Functions
-        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+
+      - name: 📦 List Main Functions
+        uses: dagger/dagger-for-github@v6
         with:
           verb: functions
-          module: .
+          module: ${{ env.MODULE }}
           version: ${{ env.DAGGER_VERSION }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: 🧪 List Test Module Functions
-        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+
+      - name: 🧪 List Test Functions
+        uses: dagger/dagger-for-github@v6
         with:
           verb: functions
-          module: tests
+          module: ${{ env.MODULE }}/tests
           version: ${{ env.DAGGER_VERSION }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: 📄 List Example Module Functions
-        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+
+      - name: 📄 List Example Functions
+        uses: dagger/dagger-for-github@v6
         with:
           verb: functions
-          module: examples/go
+          module: ${{ env.MODULE }}/examples/go
           version: ${{ env.DAGGER_VERSION }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
@@ -107,19 +106,20 @@ jobs:
 
   run-tests:
     needs: dagger-build
-    name: 🧪 Run Tests for module-template
+    name: 🧪 Run All Tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-      - name: 💣 Run All Tests
-        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+
+      - name: 💣 Run Tests
+        uses: dagger/dagger-for-github@v6
         with:
           verb: call
           args: test-all
-          module: tests
+          module: ${{ env.MODULE }}/tests
           version: ${{ env.DAGGER_VERSION }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
@@ -127,19 +127,20 @@ jobs:
 
   run-recipes:
     needs: dagger-build
-    name: 🥗 Run Recipes for module-template
+    name: 🥗 Run All Recipes
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-      - name: 🥗 Run All Example Recipes
-        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+
+      - name: 🥗 Run Recipes
+        uses: dagger/dagger-for-github@v6
         with:
           verb: call
           args: all-recipes
-          module: examples/go
+          module: ${{ env.MODULE }}/examples/go
           version: ${{ env.DAGGER_VERSION }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
@@ -147,53 +148,24 @@ jobs:
 
   golangci-lint:
     needs: dagger-build
-    name: 🔍 Lint module-template
+    name: 🔍 Run All Linters
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-      - name: 🔧 Install Dagger CLI
-        run: |
-          curl -fsSL https://dl.dagger.io/dagger/install.sh | DAGGER_VERSION=${{ env.DAGGER_VERSION }} BIN_DIR=/usr/local/bin sudo -E sh
-          dagger version
-      - name: 🔧 Install golangci-lint
+
+      - name: 🔧 Install Tools
         run: |
           curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s ${{ env.GOLANGCI_LINT_VERSION }}
           sudo mv ./bin/golangci-lint /usr/local/bin/golangci-lint
-      - name: 🚀 Dagger Develop Main Module
-        run: |
-          dagger develop
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: 📝 Run lint on Main Module
-        run: |
-          ls -ltrah && \
-          golangci-lint run --config=.golangci.yml --verbose
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: 🚀 Dagger Develop Test Module
-        run: |
-          cd tests && ls -ltrah && \
-          dagger develop
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: 📝 Run lint on Test Module
-        run: |
-          cd tests && ls -ltrah && \
-          golangci-lint run --config=../.golangci.yml --verbose
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: 🚀 Dagger Develop Example Module
-        run: |
-          cd examples/go
-          dagger develop
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: 📝 Run lint on Example Module
-        run: |
-          cd examples/go && ls -ltrah && \
-          golangci-lint run --config=../../.golangci.yml --verbose
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: 📝 Lint Main Module
+        run: cd ${{ env.MODULE }} && golangci-lint run --config=../.golangci.yml --verbose
+
+      - name: 📝 Lint Test Module
+        run: cd ${{ env.MODULE }}/tests && golangci-lint run --config=../../.golangci.yml --verbose
+
+      - name: 📝 Lint Examples Module
+        run: cd ${{ env.MODULE }}/examples/go && golangci-lint run --config=../../../.golangci.yml --verbose
