--- a/.github/workflows/ci-mod-module-template.yml
+++ b/.github/workflows/ci-mod-module-template.yml
@@ -10,7 +10,7 @@ on:
   pull_request:
     paths:
       - module-template/**
-      - .github/workflows/ci-mod-module-template.yaml
+      - .github/workflows/ci-mod-module-template.yml
   workflow_dispatch:
 
 permissions:
@@ -26,7 +26,7 @@ env:
 
 jobs:
   dagger-build:
-    name: 🏗️ Build module-template
+    name: 🏗️ Build All Modules
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -34,8 +34,8 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
 
-      - name: 📦 Dagger Develop All Modules
-        uses: dagger/dagger-for-github@v6
+      - name: 📦 Dagger Develop Main Module
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
         with:
           verb: develop
           module: ${{ env.MODULE }}
@@ -44,8 +44,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: 🧪 Dagger Develop Tests
-        uses: dagger/dagger-for-github@v6
+      - name: 🧪 Dagger Develop Tests Module
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
         with:
           verb: develop
           module: ${{ env.MODULE }}/tests
@@ -54,8 +54,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: 📄 Dagger Develop Examples
-        uses: dagger/dagger-for-github@v6
+      - name: 📄 Dagger Develop Examples Module
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
         with:
           verb: develop
           module: ${{ env.MODULE }}/examples/go
@@ -64,9 +64,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  dagger-list-functions:
+  main-module-ci:
     needs: dagger-build
-    name: 📞 List All Functions
+    name: 🔬 Main Module CI
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -74,8 +74,18 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
 
-      - name: 📦 List Main Functions
-        uses: dagger/dagger-for-github@v6
+      - name: 📦 Dagger Develop Main Module
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        with:
+          verb: develop
+          module: ${{ env.MODULE }}
+          version: ${{ env.DAGGER_VERSION }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: 📞 List Main Module Functions
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
         with:
           verb: functions
           module: ${{ env.MODULE }}
@@ -84,8 +94,36 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: 🧪 List Test Functions
-        uses: dagger/dagger-for-github@v6
+      - name: 🔧 Install Linter
+        run: |
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s ${{ env.GOLANGCI_LINT_VERSION }}
+          sudo mv ./bin/golangci-lint /usr/local/bin/golangci-lint
+
+      - name: 📝 Lint Main Module
+        run: cd ${{ env.MODULE }} && golangci-lint run --config=../.golangci.yml --verbose
+
+  tests-module-ci:
+    needs: dagger-build
+    name: 🧪 Tests Module CI
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.GO_VERSION }}
+
+      - name: 🧪 Dagger Develop Tests Module
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        with:
+          verb: develop
+          module: ${{ env.MODULE }}/tests
+          version: ${{ env.DAGGER_VERSION }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: 📞 List Test Module Functions
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
         with:
           verb: functions
           module: ${{ env.MODULE }}/tests
@@ -94,28 +132,16 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: 📄 List Example Functions
-        uses: dagger/dagger-for-github@v6
-        with:
-          verb: functions
-          module: ${{ env.MODULE }}/examples/go
-          version: ${{ env.DAGGER_VERSION }}
-          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: 🔧 Install Linter
+        run: |
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s ${{ env.GOLANGCI_LINT_VERSION }}
+          sudo mv ./bin/golangci-lint /usr/local/bin/golangci-lint
 
-  run-tests:
-    needs: dagger-build
-    name: 🧪 Run All Tests
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
-        with:
-          go-version: ${{ env.GO_VERSION }}
+      - name: 📝 Lint Tests Module
+        run: cd ${{ env.MODULE }}/tests && golangci-lint run --config=../../.golangci.yml --verbose
 
       - name: 💣 Run Tests
-        uses: dagger/dagger-for-github@v6
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
         with:
           verb: call
           args: test-all
@@ -125,9 +151,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  run-recipes:
+  examples-go-module-ci:
     needs: dagger-build
-    name: 🥗 Run All Recipes
+    name: 📄 Examples Go Module CI
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -135,8 +161,36 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
 
+      - name: 📄 Dagger Develop Examples Module
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        with:
+          verb: develop
+          module: ${{ env.MODULE }}/examples/go
+          version: ${{ env.DAGGER_VERSION }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: 📞 List Example Module Functions
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        with:
+          verb: functions
+          module: ${{ env.MODULE }}/examples/go
+          version: ${{ env.DAGGER_VERSION }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: 🔧 Install Linter
+        run: |
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s ${{ env.GOLANGCI_LINT_VERSION }}
+          sudo mv ./bin/golangci-lint /usr/local/bin/golangci-lint
+
+      - name: 📝 Lint Examples Module
+        run: cd ${{ env.MODULE }}/examples/go && golangci-lint run --config=../../../.golangci.yml --verbose
+
       - name: 🥗 Run Recipes
-        uses: dagger/dagger-for-github@v6
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
         with:
           verb: call
           args: all-recipes
@@ -145,27 +199,3 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  golangci-lint:
-    needs: dagger-build
-    name: 🔍 Run All Linters
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
-        with:
-          go-version: ${{ env.GO_VERSION }}
-
-      - name: 🔧 Install Tools
-        run: |
-          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s ${{ env.GOLANGCI_LINT_VERSION }}
-          sudo mv ./bin/golangci-lint /usr/local/bin/golangci-lint
-
-      - name: 📝 Lint Main Module
-        run: cd ${{ env.MODULE }} && golangci-lint run --config=../.golangci.yml --verbose
-
-      - name: 📝 Lint Test Module
-        run: cd ${{ env.MODULE }}/tests && golangci-lint run --config=../../.golangci.yml --verbose
-
-      - name: 📝 Lint Examples Module
-        run: cd ${{ env.MODULE }}/examples/go && golangci-lint run --config=../../../.golangci.yml --verbose
